Updating icons to ensure visibility problems dont exist on loading

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -46,6 +46,7 @@ nav {
   background-color: #4056A1;
   border-radius: 50%;
   margin: 1rem;
+  visibility: hidden;
 
   i{
     color: white;
